# autoresearch-mamba

./: .gitignore  README.md  analysis.ipynb  mlx_hybrid_preset.local.json  prepare.py  prepare_mlx.py  prepare_mlx_mamba_3.py  program.md  pyproject.toml  train_hybrid_moe_mlx.py  train_mamba.py  train_mamba_3_mlx.py  train_mamba_mlx.py
